# Macroscopic-Quantum-Electrodynamics

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  Makefile  README.md  environment_windows.yaml  environmental.yaml  pyproject.toml  setup.py
.github/workflows/: docs.yml
Beta_Test/Qdyn/: Frensel_silver_planar_665nm_N30.hdf5
configs/BEM/: compare.yaml  compare_bem_dyadic.yaml  compare_enhancement.yaml  compare_silver.yaml  compute_peff.yaml  reconstruct_GF.yaml
configs/Dyadic_GF/: GF_Sommerfeld.yaml  GF_analytical.yaml
configs/Lindblad/: ddi.yaml  quantum_dynamics.yaml  quantum_dynamics_disorder.yaml  quantum_dynamics_nhse.yaml
configs/analysis/: FE.yaml  RET.yaml
configs/disorder_nn/: nn_chain.yaml
configs/plots/: ipr.yaml  msd.yaml  pr.yaml  sqrt_msd.yaml
docs/source/: conf.py  getting-started.rst  index.rst  installation.rst  modules.rst  mqed.configs.rst  mqed.rst
mqed/BEM/: compare_BEM_dyadic.py  compare_const.py  compare_enhancement.py  compare_planar_vs_nanorod.py  compare_silver.py  compute_peff.py  reconstruct_GF.py  verify_bem_fresnel.py
mqed/DielectricFunction/: AgIm.txt  AgRe.txt  AuIm.txt  AuRe.txt  dielectric function.xlsx
mqed/Dyadic_GF/: GF_Sommerfeld.py  data_provider.py  main.py
mqed/Lindblad/: cli.py  ddi_matrix.py  quantum_dynamics.py  quantum_operator.py  run_disorder.py  run_disorder_mpi.py  run_quantum_dynamics.py
mqed/analysis/: FE.py  RET.py
mqed/disorder/: __init__.py  nn_chain_dynamics.py  nn_compare_analytical.py  python_template.py  run_disorder_nn.py
mqed/plotting/: plot_ipr.py  (+3 more)
test/: test_ddi.py  test_hydra.py
(+119 files in other folders)
